--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "core-js": "^3.30.2",
     "docxtemplater": "^3.19.7",
     "file-saver": "^2.0.5",
     "jszip": "^2.6.1",
@@ -23,6 +24,7 @@
     "@vue/cli-plugin-pwa": "~4.5.9",
     "@vue/cli-service": "^4.5.9",
     "@vue/eslint-config-standard": "^6.0.0",
+    "autoprefixer": "^8.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.16.0",
     "eslint-plugin-import": "^2.22.1",
@@ -30,6 +32,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^7.4.0",
+    "postcss": "^8.4.23",
+    "postcss-loader": "^7.3.0",
     "sass": "^1.32.0",
     "sass-loader": "^10.1.0",
     "vue-cli-plugin-vuetify": "~2.0.9",
